# Rovaca

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  build_dev.sh  libdeflate.so.0
cmake/: asan.cmake  (+2 more)
src/: CMakeLists.txt  main.cpp  rovaca_main.cpp  rovaca_main.h  rovaca_signal_handler.h  rovaca_tool.hpp  rovaca_tool_args.h
src/IOStream/: CMakeLists.txt  bam1_pool.h  bam_loader.cpp  bam_loader.h  bed_loader.cpp  bed_loader.h  fasta_loader.cpp  fasta_loader.h  header.h  reads_stream.h  vcf_loader.cpp  vcf_loader.h  vcf_writer.cpp  vcf_writer.h
src/IOStream/test/: CMakeLists.txt  bam_loader_test.cc  bed_loader_test.cc  fasta_loader_test.cc  reads_stream_test.cc
src/common/: CMakeLists.txt  downsampler.h  downsampler_hc.h  downsampler_mutect.h  read_filter_mutect.h  reads_filter.h  reads_filter_hc.h  reads_filter_lib.h  transformer.h  valid_file.h
src/common/test/: CMakeLists.txt  downsampler_test.cc  read_filter_test.cc
src/haplotypecaller/: CMakeLists.txt  README.md  haplotypecaller.cpp  haplotypecaller.h  haplotypecaller_args.cpp  haplotypecaller_args.h  haplotypecaller_engine.cpp  haplotypecaller_engine.h
src/haplotypecaller/ActiveRegion/: ActiveBase.cpp  ActiveBase.h  ActiveMainThread.cpp  ActiveMainThread.h  ActiveRegionEngine.cpp  ActiveRegionEngine.h  ActiveRegionTest.cpp  CMakeLists.txt  HcActiveBase.cpp  HcActiveBase.h  RegionManager.cpp  RegionManager.h  dbsnp_manager.cpp  dbsnp_manager.h  reference_manager.cpp  reference_manager.h
src/haplotypecaller/ActiveRegion/test/: CMakeLists.txt  TestActiveMainThread.cpp  TestActiveRegionEngine.cpp  TestHCActiveBase.cpp  TestReferenceManager.cc
src/haplotypecaller/apply/: CMakeLists.txt  assemble_argument.h  assemble_engine.cpp  assemble_engine.h  assemble_result.cpp  assemble_result.h  hc_assemble_main.c  hc_assemble_main.h  hc_assemble_utils.c
src/haplotypecaller/apply/assemble/: graph.c  hash.c  hc_assemble.h  hc_assemble_base_graph.c  hc_assemble_base_graph.h  hc_assemble_base_graph_iter.c  hc_assemble_chain_pruner.c  hc_assemble_cigar_cacl.c  hc_assemble_cigar_cacl.h  hc_assemble_cigar_utils.c  hc_assemble_cigar_utils.h  hc_assemble_debug_print.c  hc_assemble_debug_print.h  hc_assemble_dijkstra_shortest_path.c  hc_assemble_gatk_sw.c  hc_assemble_read_threading_assembler.c  hc_assemble_read_threading_graph.c  hc_assemble_reads.c  hc_assemble_seq_graph.c  hc_assemble_seq_graph.h  hc_assemble_seq_path_finder.c  hc_assemble_seq_path_finder.h  hc_assemble_simple_thread_mem.c  hc_assemble_utils.c  hc_assemble_vertex_sequence_spliter.c
src/haplotypecaller/apply/common/: list.c  list.h  pair_list.c  pair_list.h
src/haplotypecaller/apply/include/: hc_main.h
src/haplotypecaller/apply/test/: CMakeLists.txt  assemble_testcase_iterator.h  fake_assembler.cpp  fake_assembler.h  testcase_iterator.h  testcase_loader.h
src/haplotypecaller/bqsr/: CMakeLists.txt  apply_bqsr_utils.cpp  apply_bqsr_utils.h  bqsr_read_covarivates.cpp  bqsr_read_covarivates.h  bqsr_read_transformer.cpp  bqsr_read_transformer.h  bqsr_recal_tables.h
src/haplotypecaller/common/: CMakeLists.txt  common.h  enum.h  region_interface.h
src/haplotypecaller/common/assemble/: assemble_interface.h
src/haplotypecaller/common/base/: CMakeLists.txt
src/haplotypecaller/common/utils/: BlockingQueue.h  CMakeLists.txt  bam_data_pool.hpp  math_utils.cpp  math_utils.h  object_pool.h  quality_utils.cpp  quality_utils.h  ring_mem_pool.hpp  rovaca_memory_pool.cpp  rovaca_memory_pool.h
src/haplotypecaller/genotype/: CMakeLists.txt  af_calculation_result.cpp  af_calculation_result.h  allele.cpp  allele.h  allele_frequency_calculator.cpp  allele_frequency_calculator.h  allele_likelihood_matrix_mapper.hpp  allele_likelihoods.hpp  block_combiner.cpp  block_combiner.h  cigar_builder.cpp  cigar_builder.h  clipping_op.cpp  clipping_op.h  constants_str.hpp  event_map.cpp  event_map.h  forward.h  genotype.cpp  genotype.h  genotype_allele_counts.cpp  genotype_allele_counts.h  genotype_allele_counts_manger.hpp  genotype_argument.h  genotype_enum.h  genotype_likelihood_calculator.cpp  genotype_likelihood_calculator.h  genotype_likelihoods.cpp  genotype_likelihoods.h  genotype_likelihoods_cache.cpp  genotype_likelihoods_cache.h  genotype_macors.h  genotype_num_likelihoods_cache.hpp  genotype_prior_calculator.cpp  genotype_prior_calculator.h  genotype_struct.h  genotypes_context.hpp  genotyping_likelihoods.hpp  germline_genotying_engine.cpp  (+28 more)
src/haplotypecaller/genotype/interface/: interface_allele_list.hpp  interface_genotype_annotation.hpp  interface_info_field_annotation.hpp  interface_likelihood_matrix.hpp  interface_locatable.hpp  interface_permutation.hpp  interface_ploidy_model.hpp  interface_sample_list.hpp
src/haplotypecaller/genotype/test/: CMakeLists.txt  alignment_utils_unit_test.cpp  allele_frequency_calculator_unit_test.cpp  allele_likelihoods_unit_test.cpp  cigar_builder_unit_test.cpp  cigar_utils_unit_test.cpp  event_map_unit_test.cpp  genotype_allele_counts_unit_test.cpp  genotype_likelihood_calculator_unit_test.cpp  germline_genotying_engine_unit_test.cpp  lush_variant_context_utils_unit_test.cpp  read_clipper_unit_test.cpp  read_record_unit_test.cpp  read_record_utils_unit_test.cpp  unit_test_header.h  unit_test_utils.hpp
src/haplotypecaller/genotype/utils/: adapter_utils.cpp  adapter_utils.h  alignment_utils.cpp  alignment_utils.h  allele_subsetting_utils.cpp  allele_subsetting_utils.h  assembly_based_caller_utils.cpp  assembly_based_caller_utils.h  base_utils.cpp  base_utils.h  cigar_utils.cpp  cigar_utils.h  debug_utils.cpp  debug_utils.h  genotype_utils.cpp  genotype_utils.h  haplotype_utils.cpp  haplotype_utils.h  hypergeometric_distribution.cpp  hypergeometric_distribution.h  mann_whitney_u.cpp  mann_whitney_u.h  read_record_utils.cpp  read_record_utils.h  (+4 more)
src/haplotypecaller/pairhmm/: CMakeLists.txt  adapter.h  pairhmm_engine.cpp  pairhmm_engine.h  pairhmm_internal.cpp  pairhmm_internal.h
src/haplotypecaller/writer/: CMakeLists.txt  writer.cpp  writer.h
src/rovaca_logger/: CMakeLists.txt  rovaca_logger.cpp  rovaca_logger.h
(+81 files in other folders)
